fix image distortions

--- a/css/cns.css
+++ b/css/cns.css
@@ -579,7 +579,6 @@ td {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
 
 
